In coalition API methods: name -> coalition_name
